infrastructure/palo.tf
resource "aws_instance" "palo_firewall" {
  ami                         = "ami-012b6cc03ca2f0bcc"
  instance_type               = "m5.2xlarge"

  network_interface {
    device_index         = 0
    network_interface_id = aws_network_interface.palo_dataplane.id
  }

  network_interface {
    device_index         = 1
    network_interface_id = aws_network_interface.palo_mgmt.id
  }

  user_data = "op-command-modes=mgmt-interface-swap"

  key_name = "terraform-netsec-automation-testing"

  tags = {
    Name = "palo-firewall"
  }
}

resource "aws_network_interface" "palo_mgmt" {
  subnet_id       = aws_subnet.ec2_subnet.id
  private_ips     = ["192.168.1.100"]
  security_groups = [aws_security_group.paloalto_vm_sg.id]

  tags = {
    Name = "palo-mgmt-eni"
  }
}

resource "aws_network_interface" "palo_dataplane" {
  subnet_id       = aws_subnet.firewall_subnet.id
  private_ips     = ["192.168.3.20"]
  security_groups = [aws_security_group.paloalto_vm_sg.id]

  tags = {
    Name = "palo-dataplane-eni"
  }
}


resource "aws_eip" "palo_mgmt_eip" {
  domain = "vpc"
  
  tags = {
    Name = "palo-mgmt-eip"
  }

}

resource "aws_eip_association" "palo_mgmt_assoc" {
  network_interface_id = aws_network_interface.palo_mgmt.id
  allocation_id        = aws_eip.palo_mgmt_eip.id
}
